<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#020D1CFF"
    android:foregroundTint="#260F49"
    tools:context=".JuegoMain">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:background="#020D1C"
        android:importantForAccessibility="no"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/maingamehor" />


    <View
        android:id="@+id/oscurecedor"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#80000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />




    <ImageButton
        android:id="@+id/boton_circulo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginEnd="228dp"
        android:layout_marginBottom="216dp"
        android:background="#00FFFFFF"
        android:importantForAccessibility="no"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/circulo" />

    <ImageButton
        android:id="@+id/boton_cuadrado"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="28dp"
        android:backgroundTint="#00FFFFFF"
        android:importantForAccessibility="no"
        android:scaleType="centerInside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/boton_circulo"
        app:srcCompat="@drawable/cuadrado" />

    <ImageButton
        android:id="@+id/boton_triangulo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="44dp"
        android:layout_marginBottom="28dp"
        android:background="#00FFFFFF"
        android:importantForAccessibility="no"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toTopOf="@+id/boton_equis"
        app:layout_constraintStart_toEndOf="@+id/boton_circulo"
        app:srcCompat="@drawable/triangulo" />

    <ImageButton
        android:id="@+id/boton_equis"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="36dp"
        android:background="#00FFFFFF"
        android:importantForAccessibility="no"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.86"
        app:layout_constraintStart_toEndOf="@+id/boton_cuadrado"
        app:srcCompat="@drawable/equis"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/muestraPatron"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginTop="76dp"
        android:importantForAccessibility="no"
        android:scaleType="centerInside"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/contenedor_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/muestraPatron"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView2" />

    <Button
        android:id="@+id/reintentar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/fondoLetras"
        android:text="@string/reintentar"
        android:textSize="20sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/rendirse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/holo_red_dark"
        android:text="@string/rendirse"
        android:textSize="16sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reintentar"
        app:layout_constraintVertical_bias="0.061" />

    <TextView
        android:id="@+id/errorView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="124dp"
        android:text="@string/equivocado"
        android:textColor="@color/colorTexto_correcto"
        android:textSize="34sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/viewVidas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textColor="#FFFFE0 "
        android:textSize="28sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/errorView" />


</androidx.constraintlayout.widget.ConstraintLayout>